# simittag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  app.py  check.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  ros.yml
docs/: make_readme_images.py  robustness.md
fixtures/: board_grid_a4.json  board_grid_s4k_a4.json  board_multiscale_a4.json  codec.json  frames.json  geometry.json  spec.json
fixtures/stages/dist_barrel/: contours.json
fixtures/stages/fronto_t2/: contours.json
fixtures/stages/motion_M_l09/: contours.json
fixtures/stages/multitag_dense9T/: contours.json
fixtures/stages/neg_rings/: contours.json
fixtures/stages/neg_squares/: contours.json
fixtures/stages/range_D_z5_t25/: contours.json
fixtures/stages/range_D_z7_t25/: contours.json
fixtures/stages/range_M_z6_t25/: contours.json
fixtures/stages/range_M_z8_t25/: contours.json
fixtures/stages/range_S64K_z10_t25/: contours.json
fixtures/stages/range_T_z11_t25/: contours.json
fixtures/stages/range_T_z7_t25/: contours.json
fixtures/stages/sticker_D/: contours.json
fixtures/stages/sweep_D_t60_heavy/: contours.json
fixtures/stages/sweep_M_t30_typ/: contours.json
fixtures/stages/sweep_S64K_t15_typ/: contours.json
fixtures/stages/sweep_T_t00_typ/: contours.json
marker/: generate.py  svg.py
ros/: CMakeLists.txt  Cargo.toml  README.md  package.xml
ros/config/: params.yaml
ros/docker/: Dockerfile.dev
ros/launch/: simittag.launch.py
ros/src/: covariance.rs  main.rs
ros/test/: replay_fixtures.py  replay_video.py
rust/: Cargo.toml  build-wasm.sh
rust/simittag-cli/: Cargo.toml
rust/simittag-cli/src/: main.rs
rust/simittag-core/: Cargo.toml
rust/simittag-core/src/: codec.rs  contours.rs  detector.rs  fft.rs  fitellipse.rs  frontend.rs  gf16.rs  gf256.rs  image.rs  lib.rs  mat.rs  payload.rs  pose.rs  spec.rs
rust/simittag-wasm/: Cargo.toml
rust/simittag-wasm/src/: lib.rs
simittag/: board.py  calibrate.py  cli.py  codec.py  detect.py  gf16.py  gf256.py  payload.py  pose.py  spec.py
tests/: test_calibration.py  test_detector.py
