[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simittag"
dynamic = ["version"]
description = "Concentric-ring fiducial markers: detect, generate, calibrate"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-2-Clause"
authors = [{ name = "Alfa Ozaltin" }]
keywords = ["fiducial", "marker", "pose-estimation", "robotics", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python-headless>=4.5",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/alfaoz/simittag"
Repository = "https://github.com/alfaoz/simittag"

[project.scripts]
simittag = "simittag.cli:main"

[tool.hatch.version]
path = "simittag/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["simittag", "marker"]

[tool.hatch.build.targets.sdist]
include = ["simittag", "marker", "app.py", "check.sh", "README.md", "LICENSE"]
