<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simittag_ros</name>
  <version>0.1.1</version>
  <description>ROS 2 node for the simittag circular fiducial detector: verified data payloads plus metric 6-DoF poses with covariance.</description>
  <maintainer email="alfa.ozaltin@gmail.com">Alfa Ozaltin</maintainer>
  <license>BSD-2-Clause</license>
  <url type="repository">https://github.com/alfaoz/simittag-ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
