[package]
name = "simittag-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# threaded build (wasm-mt): needs nightly + build-std + atomics rustflags and a
# cross-origin-isolated page; see the build command in the README
parallel = ["simittag-core/parallel", "dep:wasm-bindgen-rayon"]

[dependencies]
simittag-core = { path = "../simittag-core" }
wasm-bindgen = "0.2"
# no-bundler: we serve plain ES modules (wasm-pack --target web, no webpack);
# without this feature the rayon worker spawner assumes bundler URL semantics
# and initThreadPool hangs forever waiting for workers that 404'd.
wasm-bindgen-rayon = { version = "1.3", optional = true, features = ["no-bundler"] }
