[package]
name = "simittag-wasm"
description = "wasm bindings for simittag-core (internal; built by rust/build-wasm.sh)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
# threaded build (wasm-mt): needs nightly + build-std + atomics rustflags and a
# cross-origin-isolated page; see the build command in the README
parallel = ["simittag-core/parallel", "dep:wasm-bindgen-rayon"]

[dependencies]
simittag-core = { path = "../simittag-core" }
wasm-bindgen = "0.2"
# no-bundler: we serve plain ES modules (wasm-pack --target web, no webpack);
# without this feature the rayon worker spawner assumes bundler URL semantics
# and initThreadPool hangs forever waiting for workers that 404'd.
wasm-bindgen-rayon = { version = "1.3", optional = true, features = ["no-bundler"] }
